优化打包时出现的问题